--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img class="d-block mx-auto mb-4" src="./logo 3s.jpg" alt="" width="200px" height="200px" style="border-radius: 50%;">
     <h1 class="display-5 fw-bold text-body-emphasis">3Sticks</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4"> Your one stop for all your printing and designing need!  </p>
+      <p class="lead mb-4"> Your one stop for all your printing and designing needs!  </p>
     </div>
   </div>
 
